# GridIronSherlock

./: .env.example  .gitattributes  .gitignore  01_ARCHITECTURE.md  05_MODELS_MLOPS.md  06_OPTIMIZER.md  10_LIVE_ENGINE.md  11_UI_DATA_CONTRACTS.md  15_DEPLOY_ENVIRONMENTS.md  18_ACCEPTANCE_CRITERIA.md  19_ANALYTICS_SPEC.md  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  package-lock.json  package.json
.codex/: maintenance.sh  setup.sh
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
CONTRACTS/: openapi.yaml
docs/: 02_DATA_MODEL.md  03_PIPELINES.md  04_FEATURE_ENGINEERING.md  07_API.md  08_INTEGRATIONS.md  09_CACHING_PERFORMANCE.md  12_TESTING_QUALITY.md  13_SECURITY_COMPLIANCE.md  14_COST_SCALING.md  16_RUNBOOKS.md  17_ENV_VARS.md  20_UI_SPEC.md  (+1 more)
services/api/: Dockerfile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt
services/api/app/: __init__.py  config.py  deps.py  main.py  stubs.py
services/api/app/contracts/: __init__.py
services/api/app/db/: session.py
services/api/app/middleware/: __init__.py  logging.py  rate_limit_stub.py  request_id.py
services/api/app/models/: __init__.py
services/api/app/routers/: __init__.py  accounts.py  leagues.py  live.py  players.py  projections.py  refresh.py  teams.py  trades.py  waivers.py
services/api/gridiron_sherlock_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/migrations/: alembic.ini  env.py
services/api/tests/: conftest.py  test_contracts.py  test_health.py  test_sdk_import.py  test_sse.py
(+54 files in other folders)
